Docker files for the Python part and some theme improvements
Docker files for the Python part and some theme improvements

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ ServerSidePythonExpmt
 venv
 tests
 src
+images/4851e9a85d2c50faafc42506fbd8bad2/aggregations.jpg
 images/4851e9a85d2c50faafc42506fbd8bad2/filtering.jpg
 images/4851e9a85d2c50faafc42506fbd8bad2/merge.jpg
+ErysIcons/borderOnes
