extra dependency for Erys (scipy Python lib)

--- a/PyDev/erysdocker/Dockerfile
+++ b/PyDev/erysdocker/Dockerfile
@@ -19,6 +19,7 @@ RUN pip3 install pandas
 RUN pip3 install gmplot
 RUN pip3 install IPython
 RUN pip3 install func-timeout
+RUN pip3 install scipy
 RUN apt-get install libapache2-mod-wsgi-py3
 
 ADD erys.py /var/www/html/erys.py
